--- a/singolo1.css
+++ b/singolo1.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Lato', sans-serif;
+    src: url(assets/font/Lato/Lato-Light.ttf);
+}
+html {
+    font-family: 'Lato', sans-serif;
+    font-size: 10px;
+}
+
 body {
     width: 1020px;
 }
@@ -7,18 +16,35 @@ body {
     height: 95px;
 }
 .logo {
+    font-size: 2.32rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
     display: inline-block;
+    padding: 33px 40px;
+    width: 100px;
+}
+
+.header__color {
+    color: red;
 }
 
 .navigation {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
     list-style: none;
-    margin: -32px 31px;
+    margin: -77px 30px;
     float: right;
-}
-.navigation li {
-    display: inline-block;
+
 }
 
-li{
-    margin: 14px;
+.navigation li {
+    display: inline-block;
+    padding: 15px;
+    font-stretch: inherit;
+    letter-spacing: -0.1rem;
 }
+
+
