--- a/singolo1.css
+++ b/singolo1.css
@@ -1,9 +1,25 @@
 @font-face {
-    font-family: 'Lato', sans-serif;
-    src: url(assets/font/Lato/Lato-Light.ttf);
+    font-family: "Lato-Regular";
+    src: url("./assets/font/Lato/Lato-Regular.ttf");
 }
+
+@font-face {
+    font-family: "Lato-Semibold";
+    src: url("./assets/font/Lato/Lato-Semibold.ttf");
+}
+
+@font-face {
+    font-family: "Lato-Black";
+    src: url("./assets/font/Lato/Lato-Black.ttf");
+}
+
+@font-face {
+    font-family: "Lato-Light";
+    src: url("./assets/font/Lato/Lato-Light.ttf");
+}
+
+
 html {
-    font-family: 'Lato', sans-serif;
     font-size: 10px;
 }
 
@@ -12,16 +28,17 @@ body {
 }
 
 .header {
-    background-color: dimgrey;
+    font-family: "Lato-Semibold", sans-serif;
+    background-color: #2d303a;
     height: 95px;
 }
 .logo {
-    font-size: 2.32rem;
+    font-size: 2.38rem;
     text-transform: uppercase;
     text-decoration: none;
     color: white;
     display: inline-block;
-    padding: 33px 40px;
+    padding: 32px 42px;
     width: 100px;
 }
 
@@ -35,7 +52,7 @@ body {
     text-decoration: none;
     color: white;
     list-style: none;
-    margin: -77px 30px;
+    margin: -79px 25px;
     float: right;
 
 }
@@ -44,7 +61,27 @@ body {
     display: inline-block;
     padding: 15px;
     font-stretch: inherit;
-    letter-spacing: -0.1rem;
+    letter-spacing: -0.5px;
+}
+
+.activ_li {
+    color: red;
+}
+
+.item {
+    position: relative;
+}
+
+.item::before {
+    content: ".";
+    color: #494e62;
+    position: absolute;
+    top: 11px;
+    right: -3px;
+}
+
+._item:last-child::before {
+    display: none;
 }
 
 
