--- a/singolo.css
+++ b/singolo.css
@@ -24,7 +24,7 @@ body {
 
 .wrapper {
     max-width: 1020px;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
 }
 
 /* style header */
@@ -41,36 +41,47 @@ body {
     text-decoration: none;
     color: white;
     display: inline-block;
-    padding: 32px 42px;
+    padding: 17px 42px;
     width: 100px;
 }
 
-.header__color {
-    color: red;
-}
-
 .navigation {
-
+    display: flex;
+    font-family: "Lato-Black", sans-serif;
+    font-style: normal;
+    font-weight: 700;
     font-size: 1.2rem;
+    line-height: 1.4rem;
+    text-align: right;
     text-transform: uppercase;
-    text-decoration: none;
-    color: white;
+    letter-spacing: -0.06em;
+    color: #FFFFFF;
+    margin: 0 25px;
+    padding-top: 12px;
+}
+
+.navigation__link {
     list-style: none;
-    margin: -64px 25px;
-    float: right;
-
+    padding: 0 15px;
+    cursor: pointer;
+}
+.navigation__link:hover {
+    color: #E94348;
+    transition: all 1s;
 }
 
-.navigation li {
-    font-family: "Lato-Semibold", sans-serif;
-    display: inline-block;
-    padding: 13px;
-    font-stretch: inherit;
-    letter-spacing: -0.5px;
+.navigation__active {
+    color: #E94348;
 }
 
-.activ_li {
-    color: red;
+.wrapper {
+    max-width: 1020px;
+}
+
+.header__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .item {
@@ -81,8 +92,8 @@ body {
     content: ".";
     color: #494e62;
     position: absolute;
-    top: 12px;
-    right: -3px;
+    top: -4px;
+    right: -1px;
 }
 
 /* style slider */
@@ -145,7 +156,6 @@ body {
     color: #666d89;
     font-size: 30px;
     line-height: 21px;
-    padding-top: 25px;
 }
 
 .our-service__paragraph {
@@ -157,7 +167,6 @@ body {
     letter-spacing: -0.4px;
     text-align: justify;
     padding-bottom: 15px;
-    padding-top: 25px;
     width: 940px;
 }
 
@@ -165,7 +174,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding-top: 18px;
     width: 902px;
 }
 
@@ -188,13 +196,13 @@ body {
     color: #767e9e;
     font-weight: 400;
     text-align: justify;
-    margin-top: 9px;
+    margin-top: -8px;
 }
 
 .layout__text {
     padding-left: 80px;
     overflow: hidden;
-    margin: -66px -38px 8px 0px;
+    margin: -86px -38px -3px 0;
 }
 
 
@@ -206,23 +214,26 @@ body {
     background-color: rgb(45,48,57);
     height: 864px;
     border-bottom: solid 6px rgb(51,55,69);
+    margin-top: -24px;
 }
 
 .portfolio__tags {
-    padding-top: 3px;
+    padding-left: 1px;
 }
 .portfolio__head-text {
     font-family: Lato-Black, 'sans-serif';
     font-size: 2.9rem;
     color: rgb(103,109,135);
-    padding: 61px 41px;
+    padding-top: 60px;
+    padding-left: 41px;
 }
 
 .portfolio__text {
     font-family: Lato-Light, 'sans-serif';
     font-size: 1.8rem;
     color: rgb(103,109,135);
-    margin: -39px 40px;
+    padding-left: 40px;
+    margin-top: -2px;
 }
 
 li{
@@ -239,7 +250,7 @@ a {
     text-decoration: none;
 }
 .tags {
-    padding: 54px 41px;
+    /*padding: 54px 41px;*/
 }
 
 .bottom {
@@ -260,7 +271,7 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin: -32px 20px;
+    margin: 22px 20px;
 }
 
 .img {
@@ -378,7 +389,7 @@ a {
 
 
 .content__blc {
-    padding-top: 11px;
+    margin-top: -13px;
 }
 
 .blc__head-text {
@@ -392,7 +403,7 @@ a {
     font-family: "Lato-Light", sans-serif;
     font-size: 1.3rem;
     color: rgb(103,109,135);
-    padding-top: 8px;
+    margin-top: -18px;
     line-height: 1.7em;
     letter-spacing: -0.018rem;
 }
@@ -409,22 +420,11 @@ a {
 }
 
 
-html {
-    font-size: 10px;
-}
-
-* {
-    margin: 0 auto;
-}
-
-.wrapper {
-    width: 1020px;
-}
-
 .contact {
     background-color: rgb(225,116,105);
     height: 648px;
     border-bottom: solid 6px rgb(217,110,110);
+    margin-top: -25px;
 }
 
 .contact__head {
@@ -436,7 +436,7 @@ html {
 }
 
 .contact__text {
-    padding-top: 19px;
+    margin-top: -7px;
     padding-left: 40px;
     font-family: "Lato-Light", sans-serif;
     font-size: 1.7rem;
@@ -452,7 +452,7 @@ html {
 }
 
 .contact__form {
-    padding-top: 27px;
+    padding-top: 10px;
     padding-left: 40px;
 }
 
@@ -497,7 +497,7 @@ html {
     font-family: "Lato-Semibold", sans-serif;
     font-size: 2rem;
     color: rgb(236,217,217);
-    padding: 39px 0 0 22px ;
+    padding: 6px 0 0 22px ;
     letter-spacing: -0.07rem;
 }
 
@@ -505,13 +505,13 @@ html {
     font-family: "Lato-Light", sans-serif;
     font-size: 1.2rem;
     color: rgb(236,217,217);
-    padding-top: 8px;
+    margin-top: -9px;
     padding-left: 21px;
     line-height: 1.85em;
 }
 
 .contact__data {
-    padding-top: 25px;
+    padding-top: 12px;
     padding-left: 25px;
     font-family: "Lato-Semibold", sans-serif;
     font-size: 1.2rem;
@@ -552,6 +552,7 @@ html {
     background-color: rgb(45,48,57);
     width: 1020px;
     height: 76px;
+    margin-top: -12px;
 }
 
 .footer__text {
@@ -563,7 +564,7 @@ html {
 }
 
 .footer__social {
-    margin-top: -23px;
+    margin-top: -35px;
     padding-left: 828px;
 }
 
