--- a/singolo.css
+++ b/singolo.css
@@ -74,10 +74,6 @@ body {
     color: #E94348;
 }
 
-.wrapper {
-    max-width: 1020px;
-}
-
 .header__wrapper {
     display: flex;
     align-items: center;
@@ -205,10 +201,6 @@ body {
     margin: -86px -38px -3px 0;
 }
 
-
-.wrapper {
-    max-width: 1020px;
-}
 
 .portfolio {
     background-color: rgb(45,48,57);
@@ -594,4 +586,595 @@ textarea::-webkit-input-placeholder {
     border-radius: 6px;
     margin: 16px 0;
     cursor: pointer;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1019px) {
+    body {
+        max-width: 768px;
+    }
+        .wrapper {
+            max-width: 768px;
+        }
+
+        /* style header */
+
+        .header {
+            font-family: "Lato-Black", sans-serif;
+            background-color: #2d303a;
+            height: 89px;
+            border-bottom: solid 6px #323746;
+        }
+        .logo {
+            font-size: 2.38rem;
+            text-transform: uppercase;
+            text-decoration: none;
+            color: white;
+            display: inline-block;
+            padding: 17px 42px;
+            width: 100px;
+        }
+
+        .navigation {
+            display: flex;
+            font-family: "Lato-Black", sans-serif;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 1.2rem;
+            line-height: 1.4rem;
+            text-align: right;
+            text-transform: uppercase;
+            letter-spacing: -0.05em;
+            color: #FFFFFF;
+            margin: 0 24px;
+            padding-top: 4px;
+        }
+
+        .navigation__link {
+            list-style: none;
+            padding: 0 15px;
+            cursor: pointer;
+        }
+        .navigation__link:hover {
+            color: #E94348;
+            transition: all 1s;
+        }
+
+        .navigation__active {
+            color: #E94348;
+        }
+
+
+        .header__wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .item {
+            position: relative;
+        }
+
+        .item::before {
+            content: ".";
+            color: #494e62;
+            position: absolute;
+            top: -4px;
+            right: -1px;
+        }
+
+        /* style slider */
+
+        .slider {
+            justify-content: space-between;
+            align-items: center;
+            background-color: #f06c64;
+            height: 446px;
+            padding: 0 40px 0 42px;
+            border-bottom: solid 6px #ea676b;
+        }
+
+        .slider__left {
+            width: 16px;
+            height: 27px;
+            background-color: transparent;
+            cursor: pointer;
+            border: 0;
+            margin-left: -12px;
+            padding: 215px 0;
+        }
+        .content__image-size-left {
+            max-width: 181px;
+        }
+    .content__image-size-right {
+            max-height: 181px;
+        }
+        .content-image-left {
+            width: 240px;
+            height: 488px;
+            background-repeat: no-repeat;
+            margin: -415px 42px;
+        }
+
+        .content-image-right {
+            height: 246px;
+            width: 484px;
+            background-repeat: no-repeat;
+            margin: 18px 278px;
+
+        }
+
+        .slider__right {
+            transform: rotate(180deg);
+            width: 16px;
+            height: 27px;
+            background-color: transparent;
+            cursor: pointer;
+            border: 0;
+            margin: -182px 683px;
+        }
+
+        /* style our-service*/
+
+        .our-service {
+            background-color: #f2f2f2;
+            height: 622px;
+            border-bottom: solid 6px #ffffff;
+            padding: 23px 40px;
+        }
+
+        .our-service__heading {
+            font-family: "Lato-Black", sans-serif;
+            color: #666d89;
+            font-size: 30px;
+            line-height: 21px;
+        }
+
+        .our-service__paragraph {
+            font-family: "Lato-Light", sans-serif;
+            font-size: 19px;
+            line-height: 30px;
+            color: #767e9e;
+            font-weight: 300;
+            letter-spacing: -0.3px;
+            text-align: justify;
+            padding-bottom: 15px;
+            width: 687px;
+        }
+
+        .layout {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            width: 687px;
+        }
+
+        .layout__w {
+            padding: 4px 34px 40px 0;
+            width: 300px;
+        }
+
+        .layout__header-text {
+            font-family: "Lato-Black", sans-serif;
+            font-size: 18px;
+            color: #666d89;
+            width: 300px;
+        }
+
+        .layout__paragraph-text {
+            font-family: "Lato-Semibold", sans-serif;
+            font-size: 12px;
+            line-height: 21px;
+            color: #767e9e;
+            font-weight: 400;
+            text-align: justify;
+            margin-top: -8px;
+        }
+
+        .layout__text {
+            padding-left: 80px;
+            overflow: hidden;
+            margin: -86px 0 -3px 1px;
+        }
+
+
+        .portfolio {
+            background-color: rgb(45,48,57);
+            height: 1096px;
+            border-bottom: solid 6px rgb(51,55,69);
+            margin-top: -24px;
+        }
+
+        .portfolio__tags {
+            padding-left: 1px;
+            padding-top: 21px;
+        }
+        .portfolio__head-text {
+            font-family: Lato-Black, 'sans-serif';
+            font-size: 2.9rem;
+            color: rgb(103,109,135);
+            padding-top: 60px;
+            padding-left: 41px;
+        }
+
+        .portfolio__text {
+            font-family: Lato-Light, 'sans-serif';
+            font-size: 1.8rem;
+            color: rgb(103,109,135);
+            padding-left: 40px;
+        }
+
+        li{
+            font-family: Lato-Light, 'sans-serif';
+            display: inline-block;
+            list-style: none;
+            color: rgb(103,109,135);
+            font-size: 1.3rem;
+        }
+
+        a {
+            color: rgb(103,109,135);
+            cursor: pointer;
+            text-decoration: none;
+        }
+        .tags {
+            /*padding: 54px 41px;*/
+        }
+
+        .bottom {
+            border: 1px solid rgb(103,109,135);
+            border-radius: 5px;
+            padding: 2px 7px;
+            margin: 0 7px 0 0;
+            letter-spacing: -0.056rem;
+        }
+
+        .active{
+            border: 1px solid white;
+            color: white;
+        }
+
+        .portfolio__img {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            margin: 31px 20px;
+        }
+
+        .img {
+            padding: 0 0 17px 20px;
+        }
+
+        .p1, .p2, .p3, .p4, .p5, .p6, .p7, .p8, .p9, .p10, .p11, .p12 {
+            width: 216px;
+            height: 183px;
+        }
+        .p1 {
+            background-image: url("assets/image/Project8.png");
+            background-position-x: -8px;
+            background-position-y: -11px;
+
+        }
+
+        .p3 {
+            background-image: url("assets/image/Project9.png");
+            background-position-x: -11px;
+            background-position-y: -1px;
+        }
+
+        .p2 {
+            background-image: url("assets/image/Project5.png");
+            background-position-x: -82px;
+            background-position-y: -43px;
+        }
+
+        .p4 {
+            background-image: url("assets/image/Project1.png");
+            background-position-x: -24px;
+            background-position-y: -2px;
+        }
+
+        .p5 {
+            background-image: url("assets/image/Project7.png");
+            background-position-x: -10px;
+            background-position-y: -16px;
+        }
+
+        .p6 {
+            background-image: url("assets/image/Project4.png");
+            background-position-x: -16px;
+            background-position-y: -4px;
+        }
+
+        .p7 {
+            background-image: url("assets/image/Project11.png");
+            background-position-x: -31px;
+            background-position-y: -39px;
+        }
+
+        .p8 {
+            background-image: url("assets/image/Project12.png");
+            background-position-x: -24px;
+            background-position-y: -32px;
+        }
+
+        .p9 {
+            background-image: url("assets/image/Project6.png");
+            background-position-x: -16px;
+            background-position-y: -2px;
+        }
+
+        .p10 {
+            background-image: url("assets/image/Project3.png");
+            background-position-x: -141px;
+            background-position-y: -113px;
+        }
+
+        .p11 {
+            background-image: url("assets/image/Project2.png");
+            background-position-x: -144px;
+            background-position-y: -175px;
+        }
+
+        .p12 {
+            background-image: url("assets/image/Project.png");
+            background-position-x: -36px;
+            background-position-y: -60px;
+        }
+
+        .about-us {
+            background-color: rgb(245,245,245);
+            height: 663px;
+            border-bottom: solid 6px rgb(251,251,251);
+        }
+
+        .about-as__content {
+            margin: -18px -27px 0px -26px;
+            width: 218px;
+            height: 218px;
+        }
+        .about-us__header-text {
+            font-family: Lato-Black, 'sans-serif';
+            font-size: 3rem;
+            color: rgb(103,109,135);
+            padding-top: 52px;
+            margin: 0 39px;
+        }
+
+    .about-us__img-size {
+        max-width: 218px;
+        max-height: 218px;
+    }
+        .about-as__text {
+            font-family: Lato-Light, sans-serif;
+            font-size: 1.8rem;
+            color: rgb(103,109,135);
+            padding-top: 18px;
+            letter-spacing: 0.015rem;
+            line-height: 1.7em;
+            margin: 0 40px;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            padding-top: 57px;
+        }
+
+
+        .content__blc {
+            margin-top: -17px;
+        }
+
+        .blc__head-text {
+            font-family: "Lato-Black", sans-serif;
+            font-size: 1.79rem;
+            color: rgb(103,109,135);
+            letter-spacing: -0.015rem;
+        }
+
+        .blc__text {
+            font-family: "Lato-Light", sans-serif;
+            font-size: 1.3rem;
+            color: rgb(103,109,135);
+            margin-top: -24px;
+            line-height: 1.7em;
+            letter-spacing: -0.018rem;
+        }
+
+        .social {
+            margin: 0 -3px;
+        }
+        .content__social {
+            margin: -2px -40px;
+        }
+
+        .social__item {
+            padding: 0 2.7px;
+        }
+
+
+        .contact {
+            background-color: rgb(225,116,105);
+            height: 625px;
+            border-bottom: solid 6px rgb(217,110,110);
+            margin-top: -25px;
+        }
+
+        .contact__head {
+            padding-top: 53px;
+            padding-left: 42px;
+            font-family: "Lato-Black", sans-serif;
+            font-size: 3rem;
+            color: rgb(236,217,217);
+        }
+
+        .contact__text {
+            margin-top: -6px;
+            padding-left: 42px;
+            width: 689px;
+            font-family: "Lato-Light", sans-serif;
+            font-size: 1.7rem;
+            color: rgb(236,217,217);
+            letter-spacing: 0.0588rem;
+            line-height: 1.8em;
+        }
+        .contact__content {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+        }
+
+        .contact__form {
+            margin-top: -18px;
+            padding-left: 40px;
+        }
+
+        .form__block {
+            padding-top: 13px;
+            width: 442px;
+        }
+
+        .form__input {
+            width: 442px;
+            height: 38px;
+            border: 1px solid rgb(200,94,84);
+            background-color: rgb(200,94,84);
+            box-sizing: border-box;
+            border-radius: 6px;
+            font-family: "Lato-Semibold", sans-serif;
+            font-size: 1.16rem;
+            padding-left: 13px;
+            cursor: pointer;
+            color: rgb(236,217,217);
+        }
+
+        .form__textarea {
+            width: 442px;
+            border: 1px solid rgb(200,94,84);
+            background-color: rgb(200,94,84);
+            box-sizing: border-box;
+            border-radius: 6px;
+            font-family: "Lato-Semibold", sans-serif;
+            font-size: 1.16rem;
+            padding-left: 13px;
+            cursor: pointer;
+            height: 158px;
+            color: rgb(236,217,217);
+        }
+
+        .contact-text {
+            width: 221px;
+            margin-left: 5px;
+            margin-top: -18px;
+        }
+
+        .contact__header-info {
+            font-family: "Lato-Semibold", sans-serif;
+            font-size: 2rem;
+            color: rgb(236,217,217);
+            padding: 6px 0 0 22px ;
+            letter-spacing: -0.07rem;
+        }
+
+        .contact__text-info {
+            font-family: "Lato-Light", sans-serif;
+            font-size: 1.2rem;
+            color: rgb(236,217,217);
+            margin-top: -17px;
+            padding-left: 23px;
+            line-height: 1.85em;
+            width: 221px;
+            letter-spacing: 0.03rem;
+        }
+
+        .contact__data {
+            padding-top: 3px;
+            padding-left: 26px;
+            font-family: "Lato-Semibold", sans-serif;
+            font-size: 1.2rem;
+            color: rgb(236,217,217);
+        }
+
+        .text-address {
+            margin: -17px 19px;
+            letter-spacing: -0.01rem;
+            cursor: pointer;
+        }
+
+        .contact__phone {
+            margin: 24px -2px;
+        }
+
+        .text-phone {
+            margin: -16px 7px;
+            letter-spacing: -0.01rem;
+            cursor: pointer;
+            text-decoration: none;
+            color: rgb(236,217,217);
+        }
+
+        .contact__email {
+            margin: -17px -3px;
+        }
+
+        .text-email{
+            margin: -16px 7px;
+            letter-spacing: -0.01rem;
+            cursor: pointer;
+            text-decoration: none;
+            color: rgb(236,217,217);
+        }
+
+        .footer {
+            background-color: rgb(45,48,57);
+            width: 768px;
+            height: 76px;
+            margin-top: 35px;
+        }
+
+        .footer__text {
+            display: none;
+            padding-top: 30px;
+            padding-left: 41px;
+            font-family: "Lato-Light", sans-serif;
+            font-size: 1.2rem;
+            color: rgb(87,92,113);
+        }
+
+        .footer__social {
+            padding-top: 22px;
+            padding-left: 309px;
+        }
+
+        .image {
+            padding-right: 5px;
+            cursor: pointer;
+        }
+
+        ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+            color: rgb(218,119,108);
+            opacity: 1; /* Firefox */
+        }
+
+        textarea::-webkit-input-placeholder {
+            padding-top: 8px;
+        }
+
+        .btn {
+            background-color: rgb(200,94,84);
+            border: none;
+            color: rgb(218,119,108);
+            padding: 8px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 14px;
+            border-radius: 6px;
+            margin: 16px 0;
+            cursor: pointer;
+        }
 }
